cabal-version: 1.12
name:          ayqaodtiqr-lyoodcipiw-hvmfzfurzz
version:       0.0.0.0
license:       AllRightsReserved
build-type:    Simple

library
    default-language:   Haskell2010
    default-extensions:
        AllowAmbiguousTypes BlockArguments ConstraintKinds DeriveAnyClass
        DeriveDataTypeable DeriveFunctor DeriveFoldable DeriveGeneric
        DeriveTraversable DerivingStrategies DerivingVia DataKinds
        DefaultSignatures DuplicateRecordFields EmptyDataDecls
        FlexibleContexts FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving InstanceSigs LambdaCase
        MultiParamTypeClasses NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction NumericUnderscores OverloadedLabels
        OverloadedStrings PatternSynonyms QuantifiedConstraints QuasiQuotes
        RankNTypes RecordWildCards ScopedTypeVariables StandaloneDeriving
        TupleSections TypeApplications TypeFamilies TypeFamilyDependencies
        TypeOperators ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS

    build-depends:
        Interpolation -any,
        QuickCheck -any,
        aeson -any,
        aeson-better-errors -any,
        aeson-diff -any,
        aeson-pretty -any,
        aeson-qq -any,
        amazonka -any,
        amazonka-core -any,
        amazonka-s3 -any,
        base -any,
        base64 >=0.4.2,
        binary -any,
        bytestring -any,
        case-insensitive -any,
        cassava -any,
        classy-prelude -any,
        clock -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        conduit -any,
        connection -any,
        containers -any,
        gqjhiyyqcx-rgghdzvqcm-urchzygimk -any,
        qivxmeiywc-jecrjyijco-tprliqfsfi -any,
        iudqbcujcd-ynukvjxgxw-nicdtugoxn -any,
        zyjfwoiclj-qxpuxvslbs-twihlsityy -any,
        qkyjwmgohp-inclbwiknw-pvbzlylyot -any,
        shaqzilprc-cnvkkznmqt-osbygjlcfq -any,
        ohouqyigpw-lndaiynzye-fcsmggspsv -any,
        cryptonite -any,
        toqjmgsrfv-nouqirkvuc-ubtevxrbsz -any,
        directory -any,
        kmydpfguoy-dmlditoywj-jbanrjbeln -any,
        ekg -any,
        ekg-core -any,
        esqueleto -any,
        uhstochqxx-jmscqnuokd-icqmvjaqaq -any,
        saidrignjp-borjrkntbw-jxnxtatreb -any,
        xromcygenl-gojypjrqvs-nycfeqojfd -any,
        exceptions -any,
        extra -any,
        fake -any,
        fast-logger >=2.4.14,
        file-embed -any,
        file-path-th -any,
        filepath -any,
        generic-lens -any,
        generic-override -any,
        generic-override-aeson -any,
        generic-random -any,
        generics-sop -any,
        hashable -any,
        hedgehog -any,
        ylxoyzxian-hniypedaoa-dgahfygwnk -any,
        hkd -any,
        http-api-data -any,
        http-client -any,
        http-client-tls -any,
        nbpvxcqiih-kifutcfxel-yxbuxwaxvc -any,
        http-media -any,
        http-types -any,
        interpolate -any,
        jose -any,
        jose-jwt -any,
        kqavalspcl-mjxvabybcy-rqybkwxafh -any,
        rsncqgtwnb-gxwvbahrpd-quhadaaeis -any,
        amtcdurjli-uwlpznlrpv-utcmngyspj -any,
        raqdrsxzcv-attoygtjjq-qbwfpkdtcm -any,
        lens -any,
        lens-aeson -any,
        uzcastvvkm-ahrxsdiznz-bhdnnootlp -any,
        mmorph -any,
        monad-control -any,
        monad-logger -any,
        crgtvuiocv-axtjsngogp-nermqbnorb -any,
        monad-loops -any,
        mtl -any,
        xtwihehity-ujcjqxvexa-mtrhiynzie -any,
        cykbpqjxqd-sblzneieby-ufuuzcgxxy -any,
        ibcsaqswoj-kghjffqrcb-fifltunohv -any,
        network -any,
        network-uri -any,
        nonempty-containers -any,
        phfepeqnuu-tzcfeylnrk-wxkjpqaipk -any,
        ndelfkyjip-gstihwuhfi-rjxxewsebt -any,
        gselmrlvgc-jtynxiqcar-ahgrxgmatz -any,
        path-pieces -any,
        persistent -any,
        persistent-postgresql -any,
        persistent-qq -any,
        yqnzgbtjil-ajvkvudagy-yflacfcvwp -any,
        persistent-template -any,
        postgresql-error-codes -any,
        atgnezedgv-lbskucbixg-bdkbwtkusi -any,
        postgresql-simple -any,
        icjwsujuik-dxgvtezivw-xkzrtwpdfq -any,
        profunctors -any,
        protolude -any,
        quickcheck-instances -any,
        random -any,
        random-shuffle -any,
        ysovwneqof-htzfreipkt-avvjcvvcdp -any,
        luljacqjym-uleizmtdpg-voznuwnupa -any,
        gtcvzcyrqh-fomvyfnmxq-bonfggbrvq -any,
        lnbsavfifx-jvkkyhijuo-mwztyrysqo -any,
        ehjuaeqivl-nzhhevcriz-kbvxylsitr -any,
        refined -any,
        jrqqfpuace-ckjryxrdrw-trllbleiex -any,
        rqrhrfngcb-lhrmfapvdl-uebrqoygak -any,
        rontohsvqd-kzkpimemzd-odglltphce -any,
        tqyksnesar-upekkbojzt-wueuynnzzh -any,
        ilkyzffjvt-vofxojcjsi-peeigbgsse -any,
        mxfcdkidxh-wfmvomxunv-volvdjmfuo -any,
        fpydkaffkt-vgotjnxvoi-cthwyleiuo -any,
        resource-pool -any,
        resourcet -any,
        rosebud -any,
        civunfdiag-tziozhaunn-zdkpvlcwwa -any,
        servant -any,
        servant-cassava -any,
        servant-client -any,
        servant-client-core -any,
        servant-docs -any,
        servant-server -any,
        irnnsxssyn-smvaxwghzf-nispjafufa -any,
        xmwnpwaspa-ifrscictqx-naqfoptqaq -any,
        bmnsexcmla-uhiigkzpho-fecljrnpui -any,
        aeisxcbrdg-lcjurvvojz-lezuipxdai -any,
        blldacdoaq-nwjshzvehs-pernmdonjn -any,
        etnxirubqy-dvsnrbmtbe-wwlkbvjnsk -any,
        lbyeagpzai-mqklrvnslg-vtmfoaplrj -any,
        wiukuwohog-vwjxvvfcnn-wyuvrdnwbt -any,
        nklcuwcmcz-rrzkeehbms-fufisqpxdt -any,
        tupxqmyoqe-eamyawauun-xoeizboyfy -any,
        lklojpplmm-gahraeiacr-nburlworaj -any,
        bulvlkdfna-dejoouyizu-hyaxeldtbf -any,
        nayaepihad-ahzciepdny-xqpqcpnvbv -any,
        hrdpcemlbl-vflmuqdmrm-qzgpglglqp -any,
        zblnwvepip-kjvrtssncl-wemnlpzrof -any,
        ydtkotmgcp-azuxdknkyc-gvybvqjofg -any,
        wlwwrnkraj-hobpvmwqln-seaiuaziys -any,
        pvlpstgwdv-ssyeecmdfo-dyxijkjfba -any,
        sdmemwqaef-zvyohazcxc-tfrypmqjyq -any,
        squeal-postgresql -any,
        stm -any,
        stm-conduit -any,
        tar -any,
        template-haskell -any,
        text -any,
        text-show -any,
        time -any,
        time-qq -any,
        yeqzgwjcrl-ubgaozonrs-aabtyfwlqo -any,
        jfshhjnzly-ceduaieezo-gdfnfdxggr -any,
        annwckljmq-muyfsitolt-edoxonacun -any,
        efydwdvkud-btanytcyal-whiuekkrfo -any,
        transformers -any,
        transformers-base -any,
        unliftio -any,
        unliftio-core -any,
        unordered-containers -any,
        uri-bytestring -any,
        uri-encode -any,
        vulsdpompx-fiahihpbmu-tkeebysusq -any,
        uuid -any,
        hyvhvjnisq-lvthavwoui-ptfwyvqrwk -any,
        validation -any,
        vector -any,
        wai -any,
        bartgulhih-fvuwxcitsk-foqrmqxrka -any,
        gqneousnmf-mnqkugguei-kcgvtbvdhv -any,
        gymqqiksln-ycqlesvmbu-mrzmpdrmlm -any,
        ihijfecmzj-ljxkhsaltz-tgoyvsagej -any,
        warp -any,
        wreq -any,
        writer-cps-mtl -any,
        yaml -any,
        yesod -any,
        yesod-core -any,
        yesod-websockets -any,
        zlib -any

executable vkwnsfphva-adacvojyvm-petwglxbxw
    main-is:            main.hs
    buildable:          False
    default-language:   Haskell2010
    default-extensions:
        AllowAmbiguousTypes BlockArguments ConstraintKinds DeriveAnyClass
        DeriveDataTypeable DeriveFunctor DeriveFoldable DeriveGeneric
        DeriveTraversable DerivingStrategies DerivingVia DataKinds
        DefaultSignatures DuplicateRecordFields EmptyDataDecls
        FlexibleContexts FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving InstanceSigs LambdaCase
        MultiParamTypeClasses NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction NumericUnderscores OverloadedLabels
        OverloadedStrings PatternSynonyms QuantifiedConstraints QuasiQuotes
        RankNTypes RecordWildCards ScopedTypeVariables StandaloneDeriving
        TupleSections TypeApplications TypeFamilies TypeFamilyDependencies
        TypeOperators ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS -threaded -rtsopts "-with-rtsopts=-N -T"

    build-depends:
        Interpolation -any,
        QuickCheck -any,
        aeson -any,
        aeson-better-errors -any,
        aeson-diff -any,
        aeson-pretty -any,
        aeson-qq -any,
        amazonka -any,
        amazonka-core -any,
        amazonka-s3 -any,
        base -any,
        base64 >=0.4.2,
        binary -any,
        blaze-html -any,
        bytestring -any,
        case-insensitive -any,
        cassava -any,
        classy-prelude -any,
        clock -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        conduit -any,
        connection -any,
        containers -any,
        gqjhiyyqcx-rgghdzvqcm-urchzygimk -any,
        qivxmeiywc-jecrjyijco-tprliqfsfi -any,
        iudqbcujcd-ynukvjxgxw-nicdtugoxn -any,
        zyjfwoiclj-qxpuxvslbs-twihlsityy -any,
        qkyjwmgohp-inclbwiknw-pvbzlylyot -any,
        shaqzilprc-cnvkkznmqt-osbygjlcfq -any,
        ohouqyigpw-lndaiynzye-fcsmggspsv -any,
        cryptonite -any,
        toqjmgsrfv-nouqirkvuc-ubtevxrbsz -any,
        directory -any,
        kmydpfguoy-dmlditoywj-jbanrjbeln -any,
        ekg -any,
        ekg-core -any,
        esqueleto -any,
        uhstochqxx-jmscqnuokd-icqmvjaqaq -any,
        saidrignjp-borjrkntbw-jxnxtatreb -any,
        xromcygenl-gojypjrqvs-nycfeqojfd -any,
        exceptions -any,
        extra -any,
        fake -any,
        fast-logger >=2.4.14,
        file-embed -any,
        file-path-th -any,
        filepath -any,
        generic-lens -any,
        generic-override -any,
        generic-override-aeson -any,
        generic-random -any,
        generics-sop -any,
        hashable -any,
        hedgehog -any,
        ylxoyzxian-hniypedaoa-dgahfygwnk -any,
        hkd -any,
        http-api-data -any,
        http-client -any,
        http-client-tls -any,
        nbpvxcqiih-kifutcfxel-yxbuxwaxvc -any,
        http-media -any,
        http-types -any,
        interpolate -any,
        jose -any,
        jose-jwt -any,
        kqavalspcl-mjxvabybcy-rqybkwxafh -any,
        rsncqgtwnb-gxwvbahrpd-quhadaaeis -any,
        amtcdurjli-uwlpznlrpv-utcmngyspj -any,
        raqdrsxzcv-attoygtjjq-qbwfpkdtcm -any,
        ayqaodtiqr-lyoodcipiw-hvmfzfurzz -any,
        lens -any,
        lens-aeson -any,
        uzcastvvkm-ahrxsdiznz-bhdnnootlp -any,
        mmorph -any,
        monad-control -any,
        monad-logger -any,
        crgtvuiocv-axtjsngogp-nermqbnorb -any,
        monad-loops -any,
        mtl -any,
        xtwihehity-ujcjqxvexa-mtrhiynzie -any,
        cykbpqjxqd-sblzneieby-ufuuzcgxxy -any,
        ibcsaqswoj-kghjffqrcb-fifltunohv -any,
        network -any,
        network-uri -any,
        nonempty-containers -any,
        phfepeqnuu-tzcfeylnrk-wxkjpqaipk -any,
        ndelfkyjip-gstihwuhfi-rjxxewsebt -any,
        gselmrlvgc-jtynxiqcar-ahgrxgmatz -any,
        path-pieces -any,
        persistent -any,
        persistent-postgresql -any,
        persistent-qq -any,
        yqnzgbtjil-ajvkvudagy-yflacfcvwp -any,
        persistent-template -any,
        postgresql-error-codes -any,
        atgnezedgv-lbskucbixg-bdkbwtkusi -any,
        postgresql-simple -any,
        icjwsujuik-dxgvtezivw-xkzrtwpdfq -any,
        profunctors -any,
        protolude -any,
        quickcheck-instances -any,
        random -any,
        random-shuffle -any,
        ysovwneqof-htzfreipkt-avvjcvvcdp -any,
        luljacqjym-uleizmtdpg-voznuwnupa -any,
        gtcvzcyrqh-fomvyfnmxq-bonfggbrvq -any,
        lnbsavfifx-jvkkyhijuo-mwztyrysqo -any,
        ehjuaeqivl-nzhhevcriz-kbvxylsitr -any,
        rawstring-qm -any,
        refined -any,
        jrqqfpuace-ckjryxrdrw-trllbleiex -any,
        rqrhrfngcb-lhrmfapvdl-uebrqoygak -any,
        rontohsvqd-kzkpimemzd-odglltphce -any,
        tqyksnesar-upekkbojzt-wueuynnzzh -any,
        ilkyzffjvt-vofxojcjsi-peeigbgsse -any,
        mxfcdkidxh-wfmvomxunv-volvdjmfuo -any,
        fpydkaffkt-vgotjnxvoi-cthwyleiuo -any,
        resource-pool -any,
        resourcet -any,
        rosebud -any,
        civunfdiag-tziozhaunn-zdkpvlcwwa -any,
        servant -any,
        servant-cassava -any,
        servant-client -any,
        servant-client-core -any,
        servant-docs -any,
        servant-server -any,
        irnnsxssyn-smvaxwghzf-nispjafufa -any,
        xmwnpwaspa-ifrscictqx-naqfoptqaq -any,
        bmnsexcmla-uhiigkzpho-fecljrnpui -any,
        aeisxcbrdg-lcjurvvojz-lezuipxdai -any,
        blldacdoaq-nwjshzvehs-pernmdonjn -any,
        etnxirubqy-dvsnrbmtbe-wwlkbvjnsk -any,
        lbyeagpzai-mqklrvnslg-vtmfoaplrj -any,
        wiukuwohog-vwjxvvfcnn-wyuvrdnwbt -any,
        nklcuwcmcz-rrzkeehbms-fufisqpxdt -any,
        tupxqmyoqe-eamyawauun-xoeizboyfy -any,
        lklojpplmm-gahraeiacr-nburlworaj -any,
        bulvlkdfna-dejoouyizu-hyaxeldtbf -any,
        nayaepihad-ahzciepdny-xqpqcpnvbv -any,
        hrdpcemlbl-vflmuqdmrm-qzgpglglqp -any,
        zblnwvepip-kjvrtssncl-wemnlpzrof -any,
        ydtkotmgcp-azuxdknkyc-gvybvqjofg -any,
        wlwwrnkraj-hobpvmwqln-seaiuaziys -any,
        pvlpstgwdv-ssyeecmdfo-dyxijkjfba -any,
        sdmemwqaef-zvyohazcxc-tfrypmqjyq -any,
        squeal-postgresql -any,
        stm -any,
        stm-conduit -any,
        tar -any,
        template-haskell -any,
        text -any,
        text-show -any,
        time -any,
        time-qq -any,
        yeqzgwjcrl-ubgaozonrs-aabtyfwlqo -any,
        jfshhjnzly-ceduaieezo-gdfnfdxggr -any,
        annwckljmq-muyfsitolt-edoxonacun -any,
        efydwdvkud-btanytcyal-whiuekkrfo -any,
        transformers -any,
        transformers-base -any,
        unliftio -any,
        unliftio-core -any,
        unordered-containers -any,
        uri-bytestring -any,
        uri-encode -any,
        vulsdpompx-fiahihpbmu-tkeebysusq -any,
        uuid -any,
        hyvhvjnisq-lvthavwoui-ptfwyvqrwk -any,
        validation -any,
        vector -any,
        wai -any,
        bartgulhih-fvuwxcitsk-foqrmqxrka -any,
        gqneousnmf-mnqkugguei-kcgvtbvdhv -any,
        gymqqiksln-ycqlesvmbu-mrzmpdrmlm -any,
        ihijfecmzj-ljxkhsaltz-tgoyvsagej -any,
        warp -any,
        wreq -any,
        writer-cps-mtl -any,
        yaml -any,
        yesod -any,
        yesod-core -any,
        yesod-websockets -any,
        zlib -any

test-suite lymfekwrce-zxwxbyujgl-kjknejpkjo
    type:               exitcode-stdio-1.0
    main-is:            main.hs
    default-language:   Haskell2010
    default-extensions:
        AllowAmbiguousTypes BlockArguments ConstraintKinds DeriveAnyClass
        DeriveDataTypeable DeriveFunctor DeriveFoldable DeriveGeneric
        DeriveTraversable DerivingStrategies DerivingVia DataKinds
        DefaultSignatures DuplicateRecordFields EmptyDataDecls
        FlexibleContexts FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving InstanceSigs LambdaCase
        MultiParamTypeClasses NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction NumericUnderscores OverloadedLabels
        OverloadedStrings PatternSynonyms QuantifiedConstraints QuasiQuotes
        RankNTypes RecordWildCards ScopedTypeVariables StandaloneDeriving
        TupleSections TypeApplications TypeFamilies TypeFamilyDependencies
        TypeOperators ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS -threaded -rtsopts "-with-rtsopts=-N -T"

    build-depends:
        Interpolation -any,
        QuickCheck -any,
        aeson -any,
        aeson-better-errors -any,
        aeson-diff -any,
        aeson-pretty -any,
        aeson-qq -any,
        amazonka -any,
        amazonka-core -any,
        amazonka-s3 -any,
        base -any,
        base64 >=0.4.2,
        binary -any,
        bytestring -any,
        case-insensitive -any,
        cassava -any,
        classy-prelude -any,
        clock -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        conduit -any,
        connection -any,
        containers -any,
        gqjhiyyqcx-rgghdzvqcm-urchzygimk -any,
        qivxmeiywc-jecrjyijco-tprliqfsfi -any,
        iudqbcujcd-ynukvjxgxw-nicdtugoxn -any,
        zyjfwoiclj-qxpuxvslbs-twihlsityy -any,
        qkyjwmgohp-inclbwiknw-pvbzlylyot -any,
        shaqzilprc-cnvkkznmqt-osbygjlcfq -any,
        ohouqyigpw-lndaiynzye-fcsmggspsv -any,
        cryptonite -any,
        toqjmgsrfv-nouqirkvuc-ubtevxrbsz -any,
        directory -any,
        kmydpfguoy-dmlditoywj-jbanrjbeln -any,
        jyikfaivsc-mhchvgdmxv-qdqsrsnxmt -any,
        ekg -any,
        ekg-core -any,
        esqueleto -any,
        uhstochqxx-jmscqnuokd-icqmvjaqaq -any,
        saidrignjp-borjrkntbw-jxnxtatreb -any,
        xromcygenl-gojypjrqvs-nycfeqojfd -any,
        exceptions -any,
        extra -any,
        fake -any,
        fast-logger >=2.4.14,
        file-embed -any,
        file-path-th -any,
        filepath -any,
        generic-lens -any,
        generic-override -any,
        generic-override-aeson -any,
        generic-random -any,
        generics-sop -any,
        hashable -any,
        hedgehog -any,
        ylxoyzxian-hniypedaoa-dgahfygwnk -any,
        hkd -any,
        http-api-data -any,
        http-client -any,
        http-client-tls -any,
        nbpvxcqiih-kifutcfxel-yxbuxwaxvc -any,
        http-media -any,
        http-types -any,
        interpolate -any,
        jose -any,
        jose-jwt -any,
        kqavalspcl-mjxvabybcy-rqybkwxafh -any,
        rsncqgtwnb-gxwvbahrpd-quhadaaeis -any,
        amtcdurjli-uwlpznlrpv-utcmngyspj -any,
        raqdrsxzcv-attoygtjjq-qbwfpkdtcm -any,
        ayqaodtiqr-lyoodcipiw-hvmfzfurzz -any,
        lens -any,
        lens-aeson -any,
        uzcastvvkm-ahrxsdiznz-bhdnnootlp -any,
        mmorph -any,
        monad-control -any,
        monad-logger -any,
        crgtvuiocv-axtjsngogp-nermqbnorb -any,
        monad-loops -any,
        mtl -any,
        xtwihehity-ujcjqxvexa-mtrhiynzie -any,
        cykbpqjxqd-sblzneieby-ufuuzcgxxy -any,
        ibcsaqswoj-kghjffqrcb-fifltunohv -any,
        network -any,
        network-uri -any,
        nonempty-containers -any,
        phfepeqnuu-tzcfeylnrk-wxkjpqaipk -any,
        ndelfkyjip-gstihwuhfi-rjxxewsebt -any,
        gselmrlvgc-jtynxiqcar-ahgrxgmatz -any,
        path-pieces -any,
        persistent -any,
        persistent-postgresql -any,
        persistent-qq -any,
        yqnzgbtjil-ajvkvudagy-yflacfcvwp -any,
        persistent-template -any,
        postgresql-error-codes -any,
        atgnezedgv-lbskucbixg-bdkbwtkusi -any,
        postgresql-simple -any,
        icjwsujuik-dxgvtezivw-xkzrtwpdfq -any,
        profunctors -any,
        protolude -any,
        quickcheck-instances -any,
        random -any,
        random-shuffle -any,
        ysovwneqof-htzfreipkt-avvjcvvcdp -any,
        luljacqjym-uleizmtdpg-voznuwnupa -any,
        gtcvzcyrqh-fomvyfnmxq-bonfggbrvq -any,
        lnbsavfifx-jvkkyhijuo-mwztyrysqo -any,
        ehjuaeqivl-nzhhevcriz-kbvxylsitr -any,
        refined -any,
        jrqqfpuace-ckjryxrdrw-trllbleiex -any,
        rqrhrfngcb-lhrmfapvdl-uebrqoygak -any,
        rontohsvqd-kzkpimemzd-odglltphce -any,
        tqyksnesar-upekkbojzt-wueuynnzzh -any,
        ilkyzffjvt-vofxojcjsi-peeigbgsse -any,
        mxfcdkidxh-wfmvomxunv-volvdjmfuo -any,
        fpydkaffkt-vgotjnxvoi-cthwyleiuo -any,
        resource-pool -any,
        resourcet -any,
        rosebud -any,
        civunfdiag-tziozhaunn-zdkpvlcwwa -any,
        servant -any,
        servant-cassava -any,
        servant-client -any,
        servant-client-core -any,
        servant-docs -any,
        servant-server -any,
        irnnsxssyn-smvaxwghzf-nispjafufa -any,
        vhpkbpdaab-qgchccpiko-nbaihjjvlj -any,
        xmwnpwaspa-ifrscictqx-naqfoptqaq -any,
        bmnsexcmla-uhiigkzpho-fecljrnpui -any,
        aeisxcbrdg-lcjurvvojz-lezuipxdai -any,
        blldacdoaq-nwjshzvehs-pernmdonjn -any,
        etnxirubqy-dvsnrbmtbe-wwlkbvjnsk -any,
        lbyeagpzai-mqklrvnslg-vtmfoaplrj -any,
        wiukuwohog-vwjxvvfcnn-wyuvrdnwbt -any,
        nklcuwcmcz-rrzkeehbms-fufisqpxdt -any,
        tupxqmyoqe-eamyawauun-xoeizboyfy -any,
        lklojpplmm-gahraeiacr-nburlworaj -any,
        bulvlkdfna-dejoouyizu-hyaxeldtbf -any,
        nayaepihad-ahzciepdny-xqpqcpnvbv -any,
        hrdpcemlbl-vflmuqdmrm-qzgpglglqp -any,
        zblnwvepip-kjvrtssncl-wemnlpzrof -any,
        ydtkotmgcp-azuxdknkyc-gvybvqjofg -any,
        wlwwrnkraj-hobpvmwqln-seaiuaziys -any,
        pvlpstgwdv-ssyeecmdfo-dyxijkjfba -any,
        sdmemwqaef-zvyohazcxc-tfrypmqjyq -any,
        squeal-postgresql -any,
        stm -any,
        stm-conduit -any,
        tar -any,
        template-haskell -any,
        text -any,
        text-show -any,
        time -any,
        time-qq -any,
        yeqzgwjcrl-ubgaozonrs-aabtyfwlqo -any,
        jfshhjnzly-ceduaieezo-gdfnfdxggr -any,
        annwckljmq-muyfsitolt-edoxonacun -any,
        efydwdvkud-btanytcyal-whiuekkrfo -any,
        transformers -any,
        transformers-base -any,
        unliftio -any,
        unliftio-core -any,
        unordered-containers -any,
        uri-bytestring -any,
        uri-encode -any,
        vulsdpompx-fiahihpbmu-tkeebysusq -any,
        uuid -any,
        hyvhvjnisq-lvthavwoui-ptfwyvqrwk -any,
        uuid-quasi -any,
        validation -any,
        vector -any,
        wai -any,
        bartgulhih-fvuwxcitsk-foqrmqxrka -any,
        gqneousnmf-mnqkugguei-kcgvtbvdhv -any,
        gymqqiksln-ycqlesvmbu-mrzmpdrmlm -any,
        ihijfecmzj-ljxkhsaltz-tgoyvsagej -any,
        warp -any,
        wreq -any,
        writer-cps-mtl -any,
        yaml -any,
        yesod -any,
        yesod-core -any,
        yesod-websockets -any,
        zlib -any

test-suite uvjrnvewmn-arhyjgqujy-ccmfrbhree
    type:               exitcode-stdio-1.0
    main-is:            main.hs
    default-language:   Haskell2010
    default-extensions:
        AllowAmbiguousTypes BlockArguments ConstraintKinds DeriveAnyClass
        DeriveDataTypeable DeriveFunctor DeriveFoldable DeriveGeneric
        DeriveTraversable DerivingStrategies DerivingVia DataKinds
        DefaultSignatures DuplicateRecordFields EmptyDataDecls
        FlexibleContexts FlexibleInstances FunctionalDependencies GADTs
        GeneralizedNewtypeDeriving InstanceSigs LambdaCase
        MultiParamTypeClasses NamedFieldPuns NoImplicitPrelude
        NoMonomorphismRestriction NumericUnderscores OverloadedLabels
        OverloadedStrings PatternSynonyms QuantifiedConstraints QuasiQuotes
        RankNTypes RecordWildCards ScopedTypeVariables StandaloneDeriving
        TupleSections TypeApplications TypeFamilies TypeFamilyDependencies
        TypeOperators ViewPatterns

    ghc-options:
        -Wall -fwarn-tabs -Wincomplete-uni-patterns -eventlog -O0 +RTS
        -A32M -RTS -threaded -rtsopts "-with-rtsopts=-N -T"

    build-depends:
        HUnit -any,
        Interpolation -any,
        QuickCheck -any,
        aeson -any,
        aeson-better-errors -any,
        aeson-diff -any,
        aeson-pretty -any,
        aeson-qq -any,
        amazonka -any,
        amazonka-core -any,
        amazonka-s3 -any,
        base -any,
        base64 >=0.4.2,
        binary -any,
        bytestring -any,
        case-insensitive -any,
        cassava -any,
        classy-prelude -any,
        clock -any,
        kdmjlflvld-otcdbxojlx-vvoxlaenkf -any,
        conduit -any,
        connection -any,
        containers -any,
        gqjhiyyqcx-rgghdzvqcm-urchzygimk -any,
        qivxmeiywc-jecrjyijco-tprliqfsfi -any,
        iudqbcujcd-ynukvjxgxw-nicdtugoxn -any,
        zyjfwoiclj-qxpuxvslbs-twihlsityy -any,
        qkyjwmgohp-inclbwiknw-pvbzlylyot -any,
        shaqzilprc-cnvkkznmqt-osbygjlcfq -any,
        ohouqyigpw-lndaiynzye-fcsmggspsv -any,
        cryptonite -any,
        toqjmgsrfv-nouqirkvuc-ubtevxrbsz -any,
        directory -any,
        kmydpfguoy-dmlditoywj-jbanrjbeln -any,
        ekg -any,
        ekg-core -any,
        esqueleto -any,
        uhstochqxx-jmscqnuokd-icqmvjaqaq -any,
        saidrignjp-borjrkntbw-jxnxtatreb -any,
        xromcygenl-gojypjrqvs-nycfeqojfd -any,
        exceptions -any,
        extra -any,
        fake -any,
        fast-logger >=2.4.14,
        file-embed -any,
        file-path-th -any,
        filepath -any,
        generic-lens -any,
        generic-override -any,
        generic-override-aeson -any,
        generic-random -any,
        generics-sop -any,
        hashable -any,
        hedgehog -any,
        ylxoyzxian-hniypedaoa-dgahfygwnk -any,
        hkd -any,
        hspec -any,
        hspec-core -any,
        hspec-expectations-pretty-diff -any,
        mbpugskatb-tiyjwpvxro-njveyigxha -any,
        hspec-hedgehog -any,
        http-api-data -any,
        http-client -any,
        http-client-tls -any,
        nbpvxcqiih-kifutcfxel-yxbuxwaxvc -any,
        http-media -any,
        http-types -any,
        interpolate -any,
        jose -any,
        jose-jwt -any,
        kqavalspcl-mjxvabybcy-rqybkwxafh -any,
        rsncqgtwnb-gxwvbahrpd-quhadaaeis -any,
        amtcdurjli-uwlpznlrpv-utcmngyspj -any,
        raqdrsxzcv-attoygtjjq-qbwfpkdtcm -any,
        ayqaodtiqr-lyoodcipiw-hvmfzfurzz -any,
        lens -any,
        lens-aeson -any,
        uzcastvvkm-ahrxsdiznz-bhdnnootlp -any,
        mmorph -any,
        monad-control -any,
        monad-logger -any,
        crgtvuiocv-axtjsngogp-nermqbnorb -any,
        monad-loops -any,
        mtl -any,
        xtwihehity-ujcjqxvexa-mtrhiynzie -any,
        cykbpqjxqd-sblzneieby-ufuuzcgxxy -any,
        ibcsaqswoj-kghjffqrcb-fifltunohv -any,
        network -any,
        network-uri -any,
        nonempty-containers -any,
        phfepeqnuu-tzcfeylnrk-wxkjpqaipk -any,
        ndelfkyjip-gstihwuhfi-rjxxewsebt -any,
        gselmrlvgc-jtynxiqcar-ahgrxgmatz -any,
        path-pieces -any,
        persistent -any,
        persistent-postgresql -any,
        persistent-qq -any,
        yqnzgbtjil-ajvkvudagy-yflacfcvwp -any,
        persistent-template -any,
        postgresql-error-codes -any,
        atgnezedgv-lbskucbixg-bdkbwtkusi -any,
        postgresql-simple -any,
        icjwsujuik-dxgvtezivw-xkzrtwpdfq -any,
        process -any,
        profunctors -any,
        protolude -any,
        quickcheck-instances -any,
        random -any,
        random-shuffle -any,
        ysovwneqof-htzfreipkt-avvjcvvcdp -any,
        luljacqjym-uleizmtdpg-voznuwnupa -any,
        gtcvzcyrqh-fomvyfnmxq-bonfggbrvq -any,
        lnbsavfifx-jvkkyhijuo-mwztyrysqo -any,
        ehjuaeqivl-nzhhevcriz-kbvxylsitr -any,
        refined -any,
        jrqqfpuace-ckjryxrdrw-trllbleiex -any,
        rqrhrfngcb-lhrmfapvdl-uebrqoygak -any,
        rontohsvqd-kzkpimemzd-odglltphce -any,
        tqyksnesar-upekkbojzt-wueuynnzzh -any,
        ilkyzffjvt-vofxojcjsi-peeigbgsse -any,
        mxfcdkidxh-wfmvomxunv-volvdjmfuo -any,
        fpydkaffkt-vgotjnxvoi-cthwyleiuo -any,
        resource-pool -any,
        resourcet -any,
        rosebud -any,
        civunfdiag-tziozhaunn-zdkpvlcwwa -any,
        servant -any,
        servant-cassava -any,
        servant-client -any,
        servant-client-core -any,
        servant-docs -any,
        servant-server -any,
        irnnsxssyn-smvaxwghzf-nispjafufa -any,
        xmwnpwaspa-ifrscictqx-naqfoptqaq -any,
        bmnsexcmla-uhiigkzpho-fecljrnpui -any,
        aeisxcbrdg-lcjurvvojz-lezuipxdai -any,
        blldacdoaq-nwjshzvehs-pernmdonjn -any,
        etnxirubqy-dvsnrbmtbe-wwlkbvjnsk -any,
        lbyeagpzai-mqklrvnslg-vtmfoaplrj -any,
        ambqfekzlo-giypknqooz-ybdhisbtgi -any,
        wiukuwohog-vwjxvvfcnn-wyuvrdnwbt -any,
        nklcuwcmcz-rrzkeehbms-fufisqpxdt -any,
        tupxqmyoqe-eamyawauun-xoeizboyfy -any,
        lklojpplmm-gahraeiacr-nburlworaj -any,
        bulvlkdfna-dejoouyizu-hyaxeldtbf -any,
        nayaepihad-ahzciepdny-xqpqcpnvbv -any,
        hrdpcemlbl-vflmuqdmrm-qzgpglglqp -any,
        zblnwvepip-kjvrtssncl-wemnlpzrof -any,
        ydtkotmgcp-azuxdknkyc-gvybvqjofg -any,
        wlwwrnkraj-hobpvmwqln-seaiuaziys -any,
        pvlpstgwdv-ssyeecmdfo-dyxijkjfba -any,
        opmzrinbix-dwnjuztviv-lhnefavumr -any,
        sdmemwqaef-zvyohazcxc-tfrypmqjyq -any,
        squeal-postgresql -any,
        stm -any,
        stm-conduit -any,
        tar -any,
        template-haskell -any,
        temporary -any,
        text -any,
        text-show -any,
        time -any,
        time-qq -any,
        yeqzgwjcrl-ubgaozonrs-aabtyfwlqo -any,
        jfshhjnzly-ceduaieezo-gdfnfdxggr -any,
        annwckljmq-muyfsitolt-edoxonacun -any,
        efydwdvkud-btanytcyal-whiuekkrfo -any,
        transformers -any,
        transformers-base -any,
        unliftio -any,
        unliftio-core -any,
        unordered-containers -any,
        uri-bytestring -any,
        uri-encode -any,
        vulsdpompx-fiahihpbmu-tkeebysusq -any,
        uuid -any,
        hyvhvjnisq-lvthavwoui-ptfwyvqrwk -any,
        uuid-quasi -any,
        validation -any,
        vector -any,
        wai -any,
        bartgulhih-fvuwxcitsk-foqrmqxrka -any,
        gqneousnmf-mnqkugguei-kcgvtbvdhv -any,
        gymqqiksln-ycqlesvmbu-mrzmpdrmlm -any,
        ihijfecmzj-ljxkhsaltz-tgoyvsagej -any,
        vbltcnoepb-bhzritxypd-erpaaootbj -any,
        ojfbtzpcfi-apxmpdnheh-xufedojzlq -any,
        warp -any,
        wreq -any,
        writer-cps-mtl -any,
        yaml -any,
        yesod -any,
        yesod-core -any,
        yesod-websockets -any,
        zlib -any
